--- a/cactus/menuc.html
+++ b/cactus/menuc.html
@@ -13,6 +13,7 @@
             <a href="cactusgh.html" target="main">| География | История |</a>
             <a href="cactusu.html" target="main">| Уход |</a>
         </div>
-        <p><a class="return" href="../index.html" target="_top">Вернуться в меню</a></p>
+        <p><a class="return1" href="../index.html" target="_top">Вернуться в меню</a></p>
+        <p><a class="return2" href="../index.html" target="_top">←</a></p>
     </body>
 </html>
