--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <body>
         <h1><span>Миниатюрная энциклопедия домашних растений</span></h1>
         <button class="MobileMenu" id="MobileMenu" onclick="OpenMenu()">
-            Открыть сипсок растений
+            Открыть список растений
         </button>
         <aside id ="menu">
             <h2>Наиболее популярные растения:</h2>
