--- a/index.html
+++ b/index.html
@@ -44,11 +44,6 @@
                 </div>
             </div>
         </main>
-        <script but>
-            function OpenMenu(){
-                document.getElementById('MobileMenu').classList.toggle('open')
-                document.getElementById('menu').classList.toggle('open')
-            }
-        </script>
+        <script src="menu.js"></script>
     </body>
 </html>
